--- a/index.html
+++ b/index.html
@@ -3,299 +3,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Meri's Daily Dashboard</title>
+  <title>To-Do List</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
+      margin: 40px;
+      background-color: #f8f8f8;
     }
-    .tabs {
-      display: flex;
-      justify-content: center;
-      background-color: #007bff;
-      flex-wrap: wrap;
-    }
-    .tab {
-      padding: 15px 20px;
-      color: white;
-      cursor: pointer;
-    }
-    .tab.active {
-      background-color: #0056b3;
-    }
-    .content {
-      padding: 30px;
-      max-width: 800px;
-      margin: auto;
-    }
+
     h1 {
       text-align: center;
-    }
-    #currentDate {
-      text-align: center;
-      font-weight: bold;
+      font-size: 36px;
       margin-bottom: 20px;
     }
-    .todo-container {
-      background: white;
-      padding: 20px;
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background-color: white;
+      padding: 20px 30px;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
-    input, button {
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-    }
-    input {
-      border: 1px solid #ccc;
+
+    input[type="text"] {
       width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
     }
+
     button {
-      background: #007bff;
+      padding: 10px 20px;
+      background-color: #007aff;
       color: white;
       border: none;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 15px;
+      margin-bottom: 20px;
     }
+
     ul {
       list-style-type: none;
-      padding-left: 0;
+      padding: 0;
     }
+
     li {
       background: #eee;
       margin: 5px 0;
       padding: 10px;
       border-radius: 5px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
+      word-break: break-word;
+      overflow-wrap: anywhere;
+      flex-wrap: wrap;
     }
+
     .task-item {
       display: flex;
       align-items: center;
       gap: 10px;
       flex: 1;
+      word-break: break-word;
+      white-space: normal;
+      overflow-wrap: anywhere;
     }
-    .remove-btn {
-      background: red;
+
+    .delete-btn {
+      background-color: red;
       color: white;
       border: none;
-      padding: 5px 10px;
-      border-radius: 4px;
+      padding: 8px 10px;
+      font-size: 14px;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .hidden {
-      display: none;
-    }
-    .accordion {
-      background-color: #f1f1f1;
-      cursor: pointer;
-      padding: 10px;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
+
+    .date-group {
+      background-color: #eee;
       font-weight: bold;
-      border-radius: 5px;
-      margin-top: 10px;
-    }
-    .panel {
-      padding: 0 15px;
-      display: none;
-      overflow: hidden;
-      background-color: white;
+      padding: 8px;
+      margin-top: 20px;
       border-radius: 5px;
     }
-    .clock-time {
-      text-align: center;
-      font-weight: bold;
-      margin: 10px 0;
+
+    .task-list {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="tabs">
-    <div class="tab active" onclick="switchTab('todo')">✅ To-Do List</div>
-    <div class="tab" onclick="switchTab('timelog')">⏱️ Time Log</div>
-    <div class="tab" onclick="switchTab('social')">📱 Social Tracker</div>
-    <div class="tab" onclick="switchTab('hair')">💇 Hair Tracker</div>
-    <div class="tab" onclick="switchTab('sleep')">💤 Sleep Tracker</div>
-  </div>
-  <div class="content">
-    <div id="currentDate"></div>
-
-    <div id="todo" class="todo-container">
-      <h1>To-Do List</h1>
-      <input type="text" id="taskInput" placeholder="Add task...">
-      <button onclick="addTask()">Add</button>
-      <div id="todoAccordion"></div>
-    </div>
-
-    <div id="timelog" class="todo-container hidden">
-      <h1>Clock-In / Clock-Out</h1>
-      <div class="clock-time" id="liveTime"></div>
-      <input type="text" id="activityInput" placeholder="What are you working on?">
-      <button onclick="clockIn()">🟢 Clock In</button>
-      <button onclick="clockOut()">🔴 Clock Out</button>
-      <div id="timelogAccordion"></div>
-    </div>
-
-    <div id="social" class="todo-container hidden">
-      <h1>Social Media Tracker</h1>
-      <input type="text" id="socialReason" placeholder="Why are you opening it?">
-      <button onclick="logSocial('TikTok')">TikTok</button>
-      <button onclick="logSocial('Instagram')">Instagram</button>
-      <button onclick="logSocial('YouTube')">YouTube</button>
-      <div id="socialAccordion"></div>
-    </div>
-
-    <div id="hair" class="todo-container hidden">
-      <h1>Hair Playing Tracker</h1>
-      <button onclick="logHair()">😬 I played with my hair</button>
-      <div id="hairAccordion"></div>
-    </div>
-
-    <div id="sleep" class="todo-container hidden">
-      <h1>Sleep Tracker</h1>
-      <input type="date" id="sleepDate" />
-      <input type="time" id="sleepTime" placeholder="Sleep Time" />
-      <input type="number" id="sleepHours" placeholder="Hours Slept" min="0" step="0.1" />
-      <button onclick="logSleep()">Log Sleep</button>
-      <div id="sleepAccordion"></div>
-    </div>
+  <div class="container">
+    <h1>To-Do List</h1>
+    <input type="text" id="taskInput" placeholder="Add task..."/>
+    <button onclick="addTask()">Add</button>
+    <ul id="taskList"></ul>
   </div>
 
   <script>
-    const getToday = () => new Date().toISOString().split("T")[0];
-    document.getElementById("currentDate").textContent = `📅 ${new Date().toLocaleDateString()}`;
+    const taskList = document.getElementById("taskList");
+    const taskInput = document.getElementById("taskInput");
 
-    function updateLiveTime() {
-      const now = new Date();
-      document.getElementById("liveTime").textContent = now.toLocaleTimeString();
-    }
-    setInterval(updateLiveTime, 1000);
-
-    function switchTab(id) {
-      document.querySelectorAll('.todo-container').forEach(d => d.classList.add('hidden'));
-      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-      document.getElementById(id).classList.remove('hidden');
-      document.querySelector(`.tab[onclick="switchTab('${id}')"]`).classList.add('active');
+    function getToday() {
+      return new Date().toISOString().split("T")[0];
     }
 
-    function addToAccordion(containerId, date, text, isCheckbox = false) {
-      const container = document.getElementById(containerId);
-      let section = document.getElementById(`${containerId}-${date}`);
-      if (!section) {
-        const btn = document.createElement("button");
-        btn.className = "accordion";
-        btn.textContent = date;
-        const panel = document.createElement("div");
-        panel.className = "panel";
-        panel.id = `${containerId}-${date}`;
-        btn.onclick = () => {
-          panel.style.display = panel.style.display === "block" ? "none" : "block";
-        };
-        container.appendChild(btn);
-        container.appendChild(panel);
-        section = panel;
-      }
+    function loadTasks() {
+      const tasks = JSON.parse(localStorage.getItem("tasks")) || {};
+      taskList.innerHTML = "";
 
-      const entry = document.createElement("li");
-      if (isCheckbox) {
-        const wrapper = document.createElement("div");
-        wrapper.className = "task-item";
-        const checkbox = document.createElement("input");
-        checkbox.type = "checkbox";
-        const label = document.createElement("span");
-        label.textContent = text;
-        label.style.textAlign = "left";
-        checkbox.onchange = () => {
-          label.style.textDecoration = checkbox.checked ? "line-through" : "none";
-        };
-        wrapper.appendChild(checkbox);
-        wrapper.appendChild(label);
-        entry.appendChild(wrapper);
-      } else {
-        entry.textContent = text;
+      for (const date in tasks) {
+        const dateGroup = document.createElement("div");
+        dateGroup.className = "date-group";
+        dateGroup.textContent = date;
+        taskList.appendChild(dateGroup);
+
+        const ul = document.createElement("ul");
+        ul.className = "task-list";
+
+        tasks[date].forEach((task, index) => {
+          const li = document.createElement("li");
+          const wrapper = document.createElement("div");
+          wrapper.className = "task-item";
+
+          const checkbox = document.createElement("input");
+          checkbox.type = "checkbox";
+          checkbox.checked = task.done;
+
+          const label = document.createElement("span");
+          label.textContent = task.text;
+          label.style.textDecoration = task.done ? "line-through" : "none";
+          label.style.flexGrow = "1";
+
+          checkbox.onchange = () => {
+            task.done = checkbox.checked;
+            label.style.textDecoration = task.done ? "line-through" : "none";
+            saveTasks(tasks);
+          };
+
+          const deleteBtn = document.createElement("button");
+          deleteBtn.textContent = "🗑️";
+          deleteBtn.className = "delete-btn";
+          deleteBtn.onclick = () => {
+            tasks[date].splice(index, 1);
+            if (tasks[date].length === 0) delete tasks[date];
+            saveTasks(tasks);
+            loadTasks();
+          };
+
+          wrapper.appendChild(checkbox);
+          wrapper.appendChild(label);
+          li.appendChild(wrapper);
+          li.appendChild(deleteBtn);
+          ul.appendChild(li);
+        });
+
+        taskList.appendChild(ul);
       }
-      const del = document.createElement("button");
-      del.textContent = "🗑️";
-      del.className = "remove-btn";
-      del.onclick = () => entry.remove();
-      entry.appendChild(del);
-      section.appendChild(entry);
     }
 
     function addTask() {
-      const task = document.getElementById("taskInput").value.trim();
-      if (!task) return;
-      addToAccordion("todoAccordion", getToday(), task, true);
-      saveLogEntry("todo", getToday(), task);
-      document.getElementById("taskInput").value = "";
+      const text = taskInput.value.trim();
+      if (!text) return;
+
+      const today = getToday();
+      const tasks = JSON.parse(localStorage.getItem("tasks")) || {};
+      if (!tasks[today]) tasks[today] = [];
+      tasks[today].push({ text: text, done: false });
+
+      saveTasks(tasks);
+      taskInput.value = "";
+      loadTasks();
     }
 
-    function clockIn() {
-      const activity = document.getElementById("activityInput").value.trim();
-      if (!activity) return alert("Enter activity");
-      localStorage.setItem("clockIn", JSON.stringify({ activity, time: new Date().toLocaleTimeString() }));
+    function saveTasks(tasks) {
+      localStorage.setItem("tasks", JSON.stringify(tasks));
     }
 
-    function clockOut() {
-      const clockInData = JSON.parse(localStorage.getItem("clockIn"));
-      if (!clockInData) return alert("You haven’t clocked in yet");
-      const endTime = new Date().toLocaleTimeString();
-      const log = `${clockInData.activity} — ${clockInData.time} to ${endTime}`;
-      addToAccordion("timelogAccordion", getToday(), log);
-      localStorage.removeItem("clockIn");
-      saveLogEntry("timelog", getToday(), log);
-    }
-
-    function logSocial(platform) {
-      const reason = document.getElementById("socialReason").value.trim() || "No reason";
-      const time = new Date().toLocaleTimeString();
-      const log = `${platform} ➜ ${time} (${reason})`;
-      addToAccordion("socialAccordion", getToday(), log);
-      saveLogEntry("social", getToday(), log);
-      document.getElementById("socialReason").value = "";
-    }
-
-    function logHair() {
-      const log = `😬 Hair played — ${new Date().toLocaleTimeString()}`;
-      addToAccordion("hairAccordion", getToday(), log);
-      saveLogEntry("hair", getToday(), log);
-    }
-
-    function logSleep() {
-      const date = document.getElementById("sleepDate").value;
-      const time = document.getElementById("sleepTime").value;
-      const hours = document.getElementById("sleepHours").value;
-      if (!date || !time || !hours) return alert("Fill all fields");
-      const log = `🛌 Slept at ${time}, ${hours}h`;
-      addToAccordion("sleepAccordion", date, log);
-      saveLogEntry("sleep", date, log);
-    }
-
-    function saveLogEntry(type, date, entry) {
-      const logs = JSON.parse(localStorage.getItem(type)) || {};
-      if (!logs[date]) logs[date] = [];
-      logs[date].push(entry);
-      localStorage.setItem(type, JSON.stringify(logs));
-    }
-
-    function loadLogEntries(type, containerId, isCheckbox = false) {
-      const logs = JSON.parse(localStorage.getItem(type)) || {};
-      for (const date in logs) {
-        logs[date].forEach(entry => addToAccordion(containerId, date, entry, isCheckbox));
-      }
-    }
-
-    loadLogEntries("todo", "todoAccordion", true);
-    loadLogEntries("timelog", "timelogAccordion");
-    loadLogEntries("social", "socialAccordion");
-    loadLogEntries("hair", "hairAccordion");
-    loadLogEntries("sleep", "sleepAccordion");
+    loadTasks();
   </script>
 </body>
 </html>
